--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+/**
+ * @name lusion
+ * @description now with auto-updates!
+ * @version vith latest version
+ * @author unironicallybased#1228
+ * @authorId 467506376373960704
+*/
+
 @import url(https://bdsources.github.io/sourcecheck/code.css);
 @import url('https://capnkitten.github.io/BetterDiscord/Spotify-Discord/css/source.css');
 @import url("https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css");
