--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 @import url("https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css");
 @import url('https://capnkitten.github.io/BetterDiscord/Spotify-Discord/css/source.css');
 @import url('https://unironicallybased.github.io/lusion/user.css');
-@import url(https://bdsources.github.io/sourcecheck/code.css);
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
+@import url(https://bdsources.github.io/sourcecheck/code.css);
 
 :root {
   --online: #43b581;
@@ -49,6 +49,8 @@
 	background-repeat:no-repeat;
 	background: inherit;
 }
+
+/* LIGHT THEME BLOCK */
 
 .theme-light .layer-3QrUeG:first-of-type::before {
     content: "Light mode is not supported on lusion";
@@ -153,6 +155,8 @@
     --deprecated-text-input-prefix: #dcddde;
 }
 
+/* PINS */
+
 #app-mount .wrapper-1Rf91z.guilds-1SWlCJ .scroller-2TZvBN {
   background-color: var(--background-floating);
 }
@@ -164,6 +168,8 @@
 .messageGroupWrapper-o-Zw7G {
   border-bottom: none !important;
 }
+
+/* SETTINGS */
 
 .side-8zPYf6 .separator-gCa7yv {
   background-color: rgba(114, 118, 125, 0.3);
@@ -182,6 +188,109 @@
     display: block;
 }
 
+/* CALL */
+
   .video-1kutKI {
     background-color: #191919;
+  }
+
+/* USERPOPOUTS */
+
+  .reduce-motion .userPopout-3XzG_A,
+  .root-SR8cQa[src*="467506376373960704"] {
+    transform:translateZ(0);
+  }
+
+  .userPopout-3XzG_A {
+    position: relative !important;
+    width: 260px !important;
+    max-height: 95vh !important;
+    z-index: 99999999 !important;
+}
+
+  .userPopout-3XzG_A .wrapper-3t9DeA::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    opacity: .5;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: var(--user-popout-position) center;
+    background-image: var(--user-background);
+    border-radius: 5px;
+    filter: none;
+  }
+
+  .userPopout-3XzG_A  .header-2BwW8b,
+  .userPopout-3XzG_A  .scroller-2FKFPG,
+  .userPopout-3XzG_A  .footer-1fjuF6 {
+    z-index: 1;
+  }
+
+/* TAGS */
+
+  .avatar-1BDn8e[src*="467506376373960704"] + h2::after{
+    content: '';
+    color: transparent;
+    height: 35px;
+    width: 20px;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    bottom: -29px;
+    left: -20px;
+    pointer-events: none;
+    filter: drop-shadow(0 0 1px var(--secondary-color)) drop-shadow(0 0 1px var(--secondary-color))
+  }
+
+  .avatar-1BDn8e[src*="467506376373960704"]:hover + h2::after{
+    color: white;
+    padding: 3px 10px !important;
+    height: auto;
+    width: fit-content !important;
+    box-sizing: border-box !important;
+    white-space: nowrap !important;
+    bottom: -40px !important;
+    font-weight: 700;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    display: block !important;
+    background-color: transparent;
+    box-shadow: none !important;
+    border-radius: 5px;
+  }
+  
+  .avatar-1BDn8e[src*="467506376373960704"] + h2::after {
+    background-image: url(https://i.imgur.com/1qBTZlh.png);
+    transform: scale(1.0);
+    bottom: -30px;
+    left: -40px;
+  }
+
+  .avatar-1BDn8e[src*="467506376373960704"]:hover + h2::after {
+    content: 'sweedy';
+    color: #ffd856;
+    --main-color: #ffe256;
+    background-image: url(https://i.imgur.com/0tAtFyG.gif);
+    text-shadow: -1px 0 black, 
+      0 1px black, 
+      1px 0 black, 
+      0 -1px black !important;
+    animation: popoutanim .2s;
+    border-radius: 5px;
+  }
+
+/* KEYFRAMES */
+
+  @keyframes popoutanim {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
