--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
-@import url("https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css");
+@import url('https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css');
 @import url('https://capnkitten.github.io/BetterDiscord/Spotify-Discord/css/source.css');
 @import url('https://unironicallybased.github.io/lusion/user.css');
+@import url('https://bdsources.github.io/sourcecheck/code.css');
 @import url('https://fonts.googleapis.com/css?family=Satisfy');
-@import url(https://bdsources.github.io/sourcecheck/code.css);
 
 :root {
   --online: #43b581;
