--- a/user.css
+++ b/user.css
@@ -1,1 +1,51 @@
 
+
+  .reduce-motion .userPopout-3XzG_A,
+  .root-SR8cQa[src*="467506376373960704"] {
+    transform:translateZ(0);
+  }
+
+  .userPopout-3XzG_A {
+    position: relative !important;
+    width: 260px !important;
+    max-height: 95vh !important;
+    z-index: 99999999 !important;
+}
+
+  .userPopout-3XzG_A .wrapper-3t9DeA::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    opacity: .5;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: var(--user-popout-position) center;
+    background-image: var(--user-background);
+    border-radius: 5px;
+    filter: none;
+  }
+
+  .userPopout-3XzG_A  .header-2BwW8b,
+  .userPopout-3XzG_A  .scroller-2FKFPG,
+  .userPopout-3XzG_A  .footer-1fjuF6 {
+    z-index: 1;
+  }
+
+.userPopout-3XzG_A {
+  --user-popout-position: center;
+}  
+
+[user_by_bdfdb*="467506376373960704"],
+[aria-label*="467506376373960704,"] {
+  --user-background: url('https://i.imgur.com/pqdICWJ.gif');
+ }
+
+[user_by_bdfdb*="588716235529650210"],
+[aria-label*="588716235529650210,"] {
+  --user-background: url('https://i.imgur.com/XRPmOL9.gif');
+}
