--- a/user.css
+++ b/user.css
@@ -1,5 +1,9 @@
 /* USERPOPOUTS */
 
+  .headerNormal-T_seeN {
+    background: rgba(0, 0, 0, 0) !important;
+  }
+
   .reduce-motion .userPopout-3XzG_A,
   .root-SR8cQa[src*="467506376373960704"] {
     transform:translateZ(0);
