--- a/user.css
+++ b/user.css
@@ -4,6 +4,12 @@
     background: rgba(0, 0, 0, 0) !important;
   }
 
+  .headerPlaying-j0WQBV,
+  .headerStreaming-2FjmGz {
+    background: rgb(0, 0, 0, 0) !important;
+  }
+
+
   .reduce-motion .userPopout-3XzG_A,
   .root-SR8cQa[src*="467506376373960704"] {
     transform:translateZ(0);
