--- a/user.css
+++ b/user.css
@@ -4,8 +4,9 @@
     background: rgba(0, 0, 0, 0) !important;
   }
 
-  .headerPlaying-j0WQBV, .headerStreaming-2FjmGz {
-      background: #7289da;
+  .headerPlaying-j0WQBV,
+  .headerStreaming-2FjmGz {
+      background: rgb(0, 0, 0, 0,) !important;
   }
 
   .reduce-motion .userPopout-3XzG_A,
