--- a/user.css
+++ b/user.css
@@ -6,7 +6,7 @@
 
   .headerPlaying-j0WQBV,
   .headerStreaming-2FjmGz {
-      background: rgb(0, 0, 0, 0) !important;
+      background: rgba(0, 0, 0, 0) !important;
   }
 
   .reduce-motion .userPopout-3XzG_A,
