--- a/user.css
+++ b/user.css
@@ -7,7 +7,7 @@
 .userPopout-3XzG_A .activity-11LB_k,
 .userPopout-3XzG_A .footer-1fjuF6,
 .headerNormal-T_seeN {
-  background: rgb(24, 24, 24) !important;
+  background: rgb(24, 24, 24, 0) !important;
   border-color: rgba(0, 0, 0, 0) !important;
 }
 
