--- a/user.css
+++ b/user.css
@@ -45,3 +45,9 @@
 [aria-label*="588716235529650210,"] {
   --user-background: url('https://i.imgur.com/XRPmOL9.gif');
 }
+
+[user_by_bdfdb*="96934885540790272"],
+[aria-label*="96934885540790272,"] {
+  --user-background: url('https://cdn.discordapp.com/attachments/563434068755087372/696397993485795338/RATTE.gif');
+}
+
