--- a/user.css
+++ b/user.css
@@ -48,6 +48,5 @@
 
 [user_by_bdfdb*="96934885540790272"],
 [aria-label*="96934885540790272,"] {
-  --user-background: url('https://cdn.discordapp.com/attachments/563434068755087372/696397993485795338/RATTE.gif');
+  --user-background: url('https://media.tenor.com/images/f2e0a9c7840d46c1adeab91218bed64e/tenor.gif');
 }
-
