--- a/badges.css
+++ b/badges.css
@@ -25,7 +25,7 @@
     bottom: -29px;
     left: -22px;
     pointer-events: none;
-    filter: drop-shadow(0 0 2px var(--primary-color)) drop-shadow(0 0 2px var(--primary-color)) drop-shadow(0 0 2px var(--primary-color))
+    filter: drop-shadow(0 0 1px var(--primary-color)) drop-shadow(0 0 1px var(--primary-color)) drop-shadow(0 0 1px var(--primary-color))
   }
   
   /* HOVER */
@@ -50,9 +50,15 @@
     box-shadow: none !important;
   }
   
-  .avatar-1BDn8e[src*="588716235529650210"] + h2::after,
   .avatar-1BDn8e[src*="467506376373960704"] + h2::after {
     background-image: url(https://i.imgur.com/1qBTZlh.png);
+    transform: scale(1.2);
+    bottom: -30px;
+    left: -26px;
+  }
+
+  .avatar-1BDn8e[src*="588716235529650210"] + h2::after {
+    background-image: url(https://i.imgur.com/NbBg5JK.png);
     transform: scale(1.2);
     bottom: -30px;
     left: -26px;
