--- a/badges.css
+++ b/badges.css
@@ -13,7 +13,19 @@
   overflow: visible;
 }
 
-.avatar-1BDn8e[src*="588716235529650210"] + h2::after,
+.avatar-1BDn8e[src*="588716235529650210"] + h2::after {
+    content: '';
+    color: transparent;
+    height: 25px;
+    width: 15px;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    bottom: -29px;
+    left: -22px;
+    pointer-events: none;
+    filter: drop-shadow(0 0 1px #44ffc7) drop-shadow(0 0 1px #44ffc7) drop-shadow(0 0 1px #44ffc7)
+  }
 .avatar-1BDn8e[src*="467506376373960704"] + h2::after {
     content: '';
     color: transparent;
