--- a/badges.css
+++ b/badges.css
@@ -24,7 +24,7 @@
     bottom: -29px;
     left: -22px;
     pointer-events: none;
-    filter: drop-shadow(0 0 1px #44ffc7) drop-shadow(0 0 1px #44ffc7) drop-shadow(0 0 1px #44ffc7)
+    filter: drop-shadow(0 0 1px #004530) drop-shadow(0 0 1px #004530) drop-shadow(0 0 1px #004530)
   }
 
 .avatar-1BDn8e[src*="467506376373960704"] + h2::after {
