--- a/main.css
+++ b/main.css
@@ -204,8 +204,8 @@
 }
 
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
-  color: #fff;
-  background-color: #1ab670;
+    color: #1ab670;
+    background-color: var(--background-primary);
 }
 
 .circleIconButton-jET_ig {
