--- a/main.css
+++ b/main.css
@@ -151,6 +151,12 @@
     --deprecated-text-input-prefix: #dcddde;
 }
 
+.titleBar-AC4pGV {
+    height: 26px;
+    box-shadow: 0 0 10px var(--lv1);
+    margin-top: 0px;
+}
+
 .wrapper-1Rf91z:after {
     background: var(--background-secondary) !important;
 }
