--- a/main.css
+++ b/main.css
@@ -151,6 +151,10 @@
     --deprecated-text-input-prefix: #dcddde;
 }
 
+.title-3qD0b-, .container-1r6BKw {
+    background: #19191900 !important;
+}
+
 .titleBar-AC4pGV {
     margin-top: 0px !important;
 }
