--- a/main.css
+++ b/main.css
@@ -178,7 +178,7 @@
 }
 
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
-    color: #000000;
+    color: #43b581;
     background-color: var(--background-primary);
 }
 
