--- a/main.css
+++ b/main.css
@@ -174,7 +174,7 @@
 }
 
 .wrapper-1Rf91z:after {
-    background: var(--background-secondary) !important;
+    background: rgb(0, 0, 0, 0) !important;
 }
 
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
