--- a/serverlist.css
+++ b/serverlist.css
@@ -253,7 +253,7 @@
 
 .wrapper-1BJsBx.selected-bZ3Lue .childWrapper-anI2G9, .wrapper-1BJsBx:hover .childWrapper-anI2G9 {
     color: #43b581;
-    background-color: #1e1e1e !imporant;
+    background-color: #1e1e1e !important;
 }
 
 html.platform-osx #app-mount .typeMacOS-3EmCyP {
