--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url('https://gibbu.github.io/BetterDiscord-Themes/HorizontalServerlist/base.css');
+@import url('https://capnkitten.github.io/BetterDiscord/Spotify-Discord/css/source.css');
 @import url('https://unironicallybased.github.io/lusion/serverlist.css');
 @import url('https://unironicallybased.github.io/lusion/badges.css');
 @import url('https://unironicallybased.github.io/lusion/user.css');
