--- a/main.css
+++ b/main.css
@@ -172,6 +172,7 @@
 .titleBar-AC4pGV {
     margin-top: 0px !important;
     height: 25px;
+    background-color: var(--background-floating);
 }
 
 .panel-24C3ux {
