--- a/main.css
+++ b/main.css
@@ -218,6 +218,10 @@
     background-color: #20222575 !important;
 }
 
+.sprite.2iCowe {
+    filter: grayscale(0%) !important;
+}
+
 /* WINDOWS BUTTONS */
 
 #app-mount .closeButton-1tv5uR path:last-child {
