--- a/main.css
+++ b/main.css
@@ -218,7 +218,7 @@
     background-color: #20222575 !important;
 }
 
-.sprite.2iCowe {
+.sprite-2iCowe {
     filter: grayscale(0%) !important;
 }
 
