--- a/main.css
+++ b/main.css
@@ -165,15 +165,17 @@
 
 /* */
 
+.expandedFolderBackground-2sPsd- {
+    background: var(accent-rgb);
+}
+
 .colorDefault-2K3EoJ.focused-3afm-j, .colorDefault-2K3EoJ:hover:not(.hideInteraction-1iHO1O) {
-	background-color: var(--accent-color);
+    background-color: var(--accent-color);
 }
 
 .colorDanger-2qLCe1.focused-3afm-j {
-	background-color: #f04747 !important;
+    background-color: #f04747 !important;
 }
-
-
 
 .numberBadge-2s8kKX {
     background-color: var(--accent-color) !important;
