--- a/main.css
+++ b/main.css
@@ -166,7 +166,7 @@
 /* */
 
 .expandedFolderBackground-2sPsd- {
-    background: var(accent-rgb);
+    background: #232323;
 }
 
 .colorDefault-2K3EoJ.focused-3afm-j, .colorDefault-2K3EoJ:hover:not(.hideInteraction-1iHO1O) {
