--- a/badges.css
+++ b/badges.css
@@ -130,7 +130,7 @@
   }
 
   .avatar-1BDn8e[src*="733989348352983062"]:hover + h2::after {
-    content: 'bane';
+    content: 'rafa';
     color: #44ffc7;
     --main-color: #44ffc7;
     background-image: url(https://i.imgur.com/XRPmOL9.gif);
