--- a/user.css
+++ b/user.css
@@ -8,8 +8,8 @@
 .userPopout-3XzG_A .footer-1fjuF6,
 .headerNormal-T_seeN,
 .body-3iLsc4{
-  background: rgb(24, 24, 24) !important;
-  border-color: rgba(0, 0, 0) !important;
+  background: rgb(24, 24, 24);
+  border-color: rgba(0, 0, 0);
 }
 
 .userPopout-3XzG_A {
