--- a/user.css
+++ b/user.css
@@ -4,12 +4,10 @@
 .headerStreaming-2FjmGz,
 .userPopout-3XzG_A .header-2BwW8b,
 .userPopout-3XzG_A .scroller-2FKFPG,
-.userPopout-3XzG_A .activity-11LB_k,
 .userPopout-3XzG_A .footer-1fjuF6,
 .headerNormal-T_seeN,
-.body-3iLsc4{
-  background: rgb(24, 24, 24);
-  border-color: rgba(0, 0, 0);
+.body-3iLsc4 {
+  background: rgb(24, 24, 24) !important;
 }
 
 .userPopout-3XzG_A {
@@ -52,7 +50,32 @@
   --user-background: url('https://media.tenor.com/images/f2e0a9c7840d46c1adeab91218bed64e/tenor.gif');
 }
 
-.topSectionPlaying-1J5E4n {
-    background: var(--user-background);
+/* */
+
+.reduce-motion .userPopout-3XzG_A {
+	transform: translateZ(0);
 }
 
+.userPopout-3XzG_A .wrapper-3t9DeA::after {
+	content: '';
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	pointer-events: none;
+	opacity: .5;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: var(--user-popout-position) center;
+	background-image: var(--user-background);
+	-webkit-mask-image: linear-gradient(#000, transparent);
+}
+
+.userPopout-3XzG_A .header-2BwW8b,
+.userPopout-3XzG_A .scroller-2FKFPG,
+.userPopout-3XzG_A .footer-1fjuF6
+.userPopout-3XzG_A .activity-11LB_k {
+	z-index: 1;
+}
