--- a/lusion.theme.css
+++ b/lusion.theme.css
@@ -3,7 +3,7 @@
  * @description download & enable the plugin from the website below.
  * @website https://is.gd/2U6OTR
  * @version vith latest version
- * @author unironicallybased#1228
+ * @author eatcomfort#1228
  * @authorId 467506376373960704
 */
 
